fsarchiver: Filesystem Archiver for Linux [http://www.fsarchiver.org]
=====================================================================
* 0.6.7:
  - Added support for sparse files (sparse file on the original disk will be recreated as sparse file)
  - Added per-archive minimum fsarchiver version requirement (MAINHEADKEY_MINFSAVERSION)
* 0.6.6 (2010-01-24):
  - Fix: don't remove the archive file when savefs/savedir fails because the archive already exists
  - Partitions already mounted are remounted with MS_BIND to have access to files hidden by mounted filesystems 
  - Analyse filesystems only when they are all accessible to prevent having to wait and then get an error
  - Moved management of data files (open/write/md5sum) from extract.c to a separate object (datafile.c)
  - Important internal changes, renaming of functions/files, and simplifications for better consistency
  - Rephrased and simplified messages and other improvements in fsarchiver.c (contribution from dgerman)
  - Fixed potential memory error in savefs/savedir with extended attributes (bug reported by mbiebl)
* 0.6.5 (2010-01-07):
  - Fixed compilation issues (pkg-config problems especially on systems with e2fsprogs < 1.41.2)
  - Retry with the default level (gzip -6) when compression of a data block lacks memory with bzip2/lzma
* 0.6.4 (2010-01-03):
  - Improved the manpage: documented the long options, added examples, links, ...
  - Reorganized code of the archive-io thread (split archive into archreader and archwriter)
  - Fixed critical bug: integer overflow for "u16 headerlen" when sum of attributes size > 65535
  - Introduced new fileformat: "FsArCh_002", but old format "FsArCh_001" is also supported
  - Using code from libblkid instead of complex implementation to read ntfs labels
  - Switch to pkg-config in configure.ac and Makefile.am (contribution from Michael Biebl)
* 0.6.3 (2009-12-28):
  - Dont fail when e2fsck returns 1 in extfs_mkfs() since it means the filesystem has been fixed